# Snakes-and-Ladder

./: .clangd  .gitignore  ACTIONS_SUMMARY.md  BOARD_SUMMARY.md  BUILD_WINDOWS.md  CMakeLists.txt  CMakeLists_audio_fix.txt  ITCH_IO_DESCRIPTION_HTML.txt  ITCH_IO_GUIDE.md  MINIGAME_MESSAGES_SUMMARY.md  README.md  WINDOWS_BUILD_QUICKSTART.md  package_for_itch.sh
.github/workflows/: build-release.yml
assets/audio/: README.md
assets/character/player2/: damsel_character.glb
build-clangd/: .ninja_deps  .ninja_log  build.ninja  dice.glb
build-clangd/shaders/: simple.frag
itch_package_mac/: README.txt
shaders/: simple.frag  simple.vert
src/: main.cpp
src/core/: audio_manager.cpp  audio_manager.h  camera.cpp  camera.h  types.h  window.cpp  window.h
src/game/: game_loop.cpp  game_loop.h  game_state.cpp  game_state.h  renderer.cpp  renderer.h
src/game/core/: game_initializer.cpp  game_initializer.h  game_loop.cpp  game_loop.h  game_renderer.cpp  game_renderer.h  game_state.h
src/game/debug/: debug_warp_state.h
src/game/map/: board.cpp  board.h  map_generator.cpp  map_generator.h  map_manager.cpp  map_manager.h
src/game/menu/: menu_renderer.cpp  menu_renderer.h  menu_state.h
src/game/minigame/: math_minigame.cpp  math_minigame.h  minigame_menu_renderer.cpp  minigame_menu_renderer.h  pattern_minigame.cpp  pattern_minigame.h  qte_minigame.cpp  qte_minigame.h  reaction_minigame.cpp  reaction_minigame.h  tile_memory_minigame.cpp  tile_memory_minigame.h
src/game/player/: player.cpp  player.h
src/game/player/dice/: dice.cpp  dice.h
src/game/ui/: ui_overlay.cpp  ui_overlay.h
src/game/win/: win_renderer.cpp  win_renderer.h  win_state.h
src/rendering/: animation_player.cpp  animation_player.h  fbx_loader.cpp  fbx_loader.h  gltf_loader.cpp  gltf_loader.h  mesh.cpp  mesh.h  obj_loader.cpp  obj_loader.h  primitives.cpp  primitives.h  shader.h  text_renderer.cpp  text_renderer.h  texture_loader.cpp  texture_loader.h
src/rendering/loaders/: gltf_loader.cpp  obj_loader.cpp  texture_loader.cpp
src/rendering/shader/: shader.cpp
src/rendering/text/: text_renderer.h
src/utils/: bounds_utils.cpp  bounds_utils.h  file_utils.cpp  file_utils.h
